back to Java 8 compatibility